--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="nav-bar">
         <div class="logo">
-            <a href="/index.html"><img src="https://github.com/Krishna-1418/Ecommerce/blob/main/images/homepage/logo.jpg?raw=true" alt=""></a>
+            <a href="/index.html"><img src="https://raw.githubusercontent.com/Krishna-1418/Ecommerce/main/images/homepage/logo.jpg" alt=""></a>
         </div>
         <div class="search-box">
             <input type="text"  placeholder="Search for more brands" >
