--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
             <a href="">Deals</a>
         </div>
         <div class="nav-icon">
-            <a href=""><img src="/images/profile-user.png" alt="">
+            <a href=""><img src="https://github.com/Krishna-1418/Ecommerce/blob/main/images/profile-user.png?raw=true" alt="">
             </a>
-            <a href=""><img src="/images/shopping-cart.png" alt="">
+            <a href=""><img src="https://github.com/Krishna-1418/Ecommerce/blob/main/images/shopping-cart.png?raw=true" alt="">
             </a>
         </div>
     </div>
     <div class="hero-section">
-        <img src="/images/electronics/moblie1.jpg" alt="">
-        <img src="/images/fashion/fashion1.jpg" alt="">
-        <img src="/images/electronics/mobile2.jpg" alt="">
-        <img src="/images/fashion/fashion2.jpg" alt="">
+        <img src="https://github.com/Krishna-1418/Ecommerce/blob/main/images/electronics/m1.jpg?raw=true" alt="">
+        <img src="https://github.com/Krishna-1418/Ecommerce/blob/main/images/fashion/fashion1.jpg?raw=true" alt="">
+        <img src="https://github.com/Krishna-1418/Ecommerce/blob/main/images/electronics/m2.jpg?raw=true" alt="">
+        <img src="https://github.com/Krishna-1418/Ecommerce/blob/main/images/fashion/fashion2.jpg?raw=true" alt="">
     </div>
     <div class="footer">
         <div class="footer-links">
